# wagtailpurge

./: CHANGELOG.md  MANIFEST.in  README.md  pytest.ini  setup.cfg
.github/workflows/: codeql-analysis.yml  lint.yml  package.yml  test-experimental.yml  test-python.yml  test.yml  test_python.yml
wagtailpurge/: __init__.py  apps.py  constants.py  filters.py  forms.py  modeladmin.py  models.py  test_modeladmin.py  test_models.py  test_views.py  views.py  wagtail_hooks.py
wagtailpurge/migrations/: 0001_initial.py  0002_urlpurgerequest.py
wagtailpurge/templates/modeladmin/wagtailpurge/: create.html
wagtailpurge/testapp/: models.py  settings.py
wagtailpurge/testapp/migrations/: 0001_initial.py
wagtailpurge/tests/: settings.py  urls.py  utils.py
