[bdist_wheel]
universal = 1

[metadata]
name = wagtailpurge
version = attr: wagtailpurge.get_version
author = Andy Babic
author_email = andyjbabic@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords= wagtail cms cache caches purge clear invalidate renditions utility
classifiers=
    Environment :: Web Environment
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Wagtail
    Framework :: Wagtail :: 2

[options]
packages = find:
include_package_data = true
install_requires =
    Wagtail >=2.12,<2.15
    Django >=3.1
python_requires = >=3.6

[options.packages.find]
exclude =
    wagtailpurge.testapp*

[options.extras_require]
lint =
    black ==21.7b0
    isort ==5.9.3
    flake8 ==3.9.2
test =
    pytest-cov ==2.12.1
    pytest-mock ==3.6.1
    pytest-django ==4.4.0
    pytest ==6.2.4

[flake8]
ignore = C901,W503
exclude = */migrations/*,*/node_modules/*
max-line-length = 100

[isort]
known_first_party=wagtailpurge
profile=black
known_django=asgiref,django
known_wagtail=wagtail,modelcluster
skip=migrations,node_modules,venv
sections=STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section=THIRDPARTY
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=100
